	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/directx.ico
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/pch.cpp
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/pch.h
	new file:   ZGame/3dsMax/SDKMESH/directxtkmodelviewer/resource.rc

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/07.18_08_03.99.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/08.11_44_40.87.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/10.15_35_55.48.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/10.15_57_12.54.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/10.18_01_23.08.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/Anim.sdkmesh
