@@ -6238,3 +6238,14 @@ Changes to be committed:
 	modified:   History.txt
 	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/Anim.sdkmesh
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2015/12/11.17_37_34.39.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
